BUG: doc dependencies
Add autoapi to the list of dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ classifiers = [
 
 [project.optional-dependencies]
 doc = [
+    "autoapi",
     "myst_parser",
     "numpydoc",
     "pyproject_parser",
