--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,6 @@ jobs:
     - name: Check that installation imports correctly
       run: |
         cd ..
+        mkdir pysatData
+        python -c "import pysat; pysat.params['data_dirs'] = 'pysatData'"
         python -c "import lstid_processing; print(lstid_processing.__version__)"
