--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@
 # https://help.github.com/actions/language-and-framework-guides/
 # using-python-with-github-actions
 
-name: unittest with flake8
+name: flake8 and installation
 
 on: [push, pull_request]
 
